--- a/Hobbies.html
+++ b/Hobbies.html
@@ -14,7 +14,7 @@
     <li><a href="https://www.blender.org/" target="_blank">3D Modeling</a></li>
     <li><a href="https://codepen.io/" target="_blank">Coding</a></li>
   </ol>
-  <h3><a href="C:\Users\Dylan\Desktop\HTML Personal Site\index.html">Home</a></h3>
+  <h3><a href="index.html">Home</a></h3>
 </body>
 
 </html>
